<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="default_live_wallpaper" translatable="false">com.breel.wallpapers/com.breel.wallpapers.dioramas.lagos.LagosWallpaperService</string>
    <string name="app_releases_url" translatable="false">https://play.google.com/store/apps/details?id=amirz.rootless.nexuslauncher</string>
    <string name="app_donate_url" translatable="false">https://play.google.com/store/apps/details?id=amirz.donation</string>
    <string name="special_greeting" translatable="false">Hello Jane! Lots of love from the Lawnchair team.</string>
    <string name="action_open_notifications_class" translatable="false">ch.deletescape.lawnchair.gestures.handlers.NotificationsOpenGestureHandler</string>
    <string name="action_open_drawer_class" translatable="false">ch.deletescape.lawnchair.gestures.handlers.OpenDrawerGestureHandler</string>
    <string name="action_open_overview_class" translatable="false">ch.deletescape.lawnchair.gestures.handlers.OpenOverviewGestureHandler</string>
    <string name="action_do_nothing_class" translatable="false">ch.deletescape.lawnchair.gestures.BlankGestureHandler</string>
    <string name="default_owm_key" translatable="false">17a6438b1d63d5b05f7039e7cb52cde7</string>
    <string name="action_switch_apps_class" translatable="false">ch.deletescape.lawnchair.gestures.SwitchAppsGestureHandler</string>
    <string name="icu_abbrev_wday_month_day_no_year">EEEEMMMd</string>
    <string name="icu_abbrev_time">HH:mm</string>
    <string name="icu_abbrev_time_12h">hh:mm aa</string>
    <string name="icu_abbrev_date"> dd MMMM</string>
    <string name="search_menu">Search</string>
    <string name="search_no_results">No Results</string>
    <string name="restart_lawnchair_pref_title">Restart</string>
    <string name="developer_options_title">Developer Options</string>
    <string name="change_default_home">Set as Home App</string>
    <string name="action_apply">Done</string>
    <string name="theme_dark_theme_mode_on">Enabled</string>
    <string name="theme_dark_theme_mode_off">Disabled</string>
    <string name="theme_title">Theme</string>
    <string name="pixel_ui_pref_summary">Icons, Colors, Blur</string>
    <string name="pref_icon_packs">Icon Packs</string>
    <string name="icon_pack_default">System Icons</string>
    <string name="pref_icon_pack_masking">Icon Masking</string>
    <string name="pref_icon_pack_masking_summary">Match unthemed icons to Icon Pack.</string>
    <string name="pref_legacy_treatment_title">Create Adaptive Icons</string>
    <string name="pref_legacy_treatment_summary">Create Adaptive Icons for all shortcuts.</string>
    <string name="pref_legacy_colored_backgrounds">Color Backgrounds</string>
    <string name="pref_legacy_colored_backgrounds_summary">Color generated Adaptive Icons’ backgrounds.</string>
    <string name="pref_white_only_treatment">Replace White Backgrounds</string>
    <string name="pref_white_only_treatment_summary">Color all Adaptive Icons’ backgrounds.</string>
    <string name="adaptify_pack_title">Create Adaptive Icons for Icon Pack</string>
    <string name="icon_shape_override_label">Icon Shape</string>
    <string name="reset_custom_icons">Remove Custom Icons</string>
    <string name="reset_custom_icons_confirmation">Revert to default icons from this Icon Pack? This can’t be undone.</string>
    <string name="appearance">Appearance</string>
    <string name="theme_auto">Automatic (Matches Wallpaper)</string>
    <string name="theme_auto_night_mode">Set by System</string>
    <string name="theme_dark_theme_mode_follow_daylight">Scheduled (Dark at Night)</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark_text">Light w/ Dark Text</string>
    <string name="theme_with_dark_text">Dark Text</string>
    <string name="theme_use_black">Use Pure Black</string>
    <string name="theme_use_dark_text">Use Dark Text</string>
    <string name="lawnchair_accent">Accent Color</string>
    <string name="color_pixel_accent">Google Blue</string>
    <string name="color_system_accent">Set by System</string>
    <string name="color_wallpaper_main">Wallpaper — Primary</string>
    <string name="color_wallpaper_secondary">Wallpaper — Secondary</string>
    <string name="color_wallpaper_tertiary">Wallpaper — Tertiary</string>
    <string name="pref_fonts_title">Fonts</string>
    <string name="blur_pref_title">Blur</string>
    <string name="blur_pref_summary">Blur page backgrounds.</string>
    <string name="blur_radius_pref_title">Blur Intensity</string>
    <string name="general_pref_title">Desktop</string>
    <string name="general_pref_summary">Layout, Lock Desktop, Transitions</string>
    <string name="grid_size">Icon Grid</string>
    <string name="grid_size_width">Width</string>
    <string name="grid_size_height">Height</string>
    <string name="num_hotseat_icons_pref_title">Icon Count</string>
    <string name="overlap_placement">Allow Overlaps</string>
    <string name="lock_desktop">Lock Desktop</string>
    <string name="pref_category_icons">Shortcuts</string>
    <string name="hide_icon_labels_pref_title">Hide Labels</string>
    <string name="pref_mutliline_labels">Multiline Labels</string>
    <string name="icon_text_scale_pref_title">Text Size</string>
    <string name="text_color">Text Color</string>
    <string name="icon_scale_pref_title">Icon Size</string>
    <string name="auto_add_shortcuts_label">Add New Shortcuts to Desktop</string>
    <string name="pref_icon_popup_menu">Shortcut Bubble</string>
    <string name="pref_category_misc">Other</string>
    <string name="animation_type_title">App Launch Transition</string>
    <string name="animation_type_default">Default</string>
    <string name="animation_type_pie">Android Pie</string>
    <string name="animation_type_pie_like">Android Pie (Emulated)</string>
    <string name="animation_type_reveal">Reveal</string>
    <string name="animation_type_slide_up">Slide Up</string>
    <string name="animation_type_scale_up">Scale Up</string>
    <string name="animation_type_blink">Blink</string>
    <string name="animation_type_fade">Fade</string>
    <string name="icon_badging_title">Notification Dots</string>
    <string name="pref_notification_count_title">Show Notification Count</string>
    <string name="allow_rotation_title">Enable Rotation</string>
    <string name="pref_center_wallpaper">Center Wallpaper</string>
    <string name="pref_center_wallpaper_summary">Disable wallpaper scrolling.</string>
    <string name="pref_hide_statusbar">Hide Status Bar</string>
    <string name="full_width_width_widgets_pref_title">Wide Widgets</string>
    <string name="full_width_widgets_pref_summary">Let widgets stretch to the screen’s edges.</string>
    <string name="show_top_shadow_pref_title">Show Top Shadow</string>
    <string name="smartspace_preferences_in_settings">At a Glance</string>
    <string name="smartspace_preferences_in_settings_desc">Date &amp; Time, Data Sources</string>
    <string name="smartspace_time">Show Time</string>
    <string name="smartspace_date">Show Date</string>
    <string name="pref_smartspace_time_above">Show Large Clock</string>
    <string name="pref_hide_statusbar_clock">Hide Status Bar Clock</string>
    <string name="root_access_required">Root access required.</string>
    <string name="smartspace_time_24_h">Use 24-Hour Format</string>
    <string name="title_use_pill_qsb">Show Pill Search Shortcut</string>
    <string name="pref_category_weather">Other</string>
    <string name="pref_smartspace_widget_provider">Weather Source</string>
    <string name="google_app">Google App</string>
    <string name="weather_provider_disabled">Disabled</string>
    <string name="weather_provider_owm">OpenWeatherMap</string>
    <string name="weather_provider_pe">Pixel Experience</string>
    <string name="pref_weather_units">Temperature Unit</string>
    <string name="units_metric">Celsius</string>
    <string name="units_imperial">Fahrenheit</string>
    <string name="units_kelvin">Kelvin</string>
    <string name="units_rakine">Rankine</string>
    <string name="units_newton">Newton</string>
    <string name="units_delisle">Delisle</string>
    <string name="units_reaumur">Réaumur</string>
    <string name="units_romer">Rømer</string>
    <string name="pref_smartspace_event_providers">Data Sources</string>
    <string name="battery_status">Battery Status</string>
    <string name="event_provider_now_playing">Now Playing</string>
    <string name="event_provider_unread_notifications">Notifications</string>
    <string name="personality_provider">Greetings</string>
    <string name="pref_smartspace_event_provider">Event Source</string>
    <string-array name="greetings_morning">
        <item>Good morning!</item>
        <item>Have a great day!</item>
        <item>It’s a beautiful day outside!</item>
    </string-array>
    <string-array name="greetings_evening">
        <item>What’s up?</item>
        <item>Good evening!</item>
        <item>How did your day go?</item>
        <item>How was your day?</item>
    </string-array>
    <string-array name="greetings_night">
        <item>Sleep well!</item>
        <item>See you tomorrow!</item>
        <item>Good night!</item>
        <item>Don’t stay up too late!</item>
    </string-array>
    <string name="battery_charging">Charging</string>
    <string name="dock_fill">Show Background</string>
    <string name="background_color">Background Color</string>
    <string name="dock_shadow">Show Shadow</string>
    <string name="radius">Corner Radius</string>
    <string name="hotseat_show_arrow">Show Arrow</string>
    <string name="hotseat_show_page_indicator">Show Page Indicator</string>
    <string name="two_row_dock">Show Second Row</string>
    <string name="pref_category_searchbar">Search Bar</string>
    <string name="dock_search_bar">Show Search Bar</string>
    <string name="dock_colored_google">Color Icons</string>
    <string name="pref_category_theme">Style</string>
    <string name="pref_drawer_columns">Column Count</string>
    <string name="pref_drawer_padding">Row Height</string>
    <string name="hide_apps">Hidden App Shortcuts</string>
    <string name="categorization">Categories</string>
    <string name="title_all_apps_search">Show Search Bar</string>
    <string name="title_all_apps_google_search">Use Global Search</string>
    <string name="summary_all_apps_google_search">Find websites, contacts, and shortcuts.</string>
    <string name="title_search_hidden_apps">Find Hidden Shortcuts</string>
    <string name="summary_search_hidden_apps">Show hidden shortcuts in results.</string>
    <string name="suggestion_pref_screen_title">Suggestions</string>
    <string name="title_app_suggestions_in_search">App Suggestions</string>
    <string name="app_actions_pref_title">Actions</string>
    <string name="app_actions_pref_desc">Shortcuts to frequently used screens.</string>
    <string name="app_actions_reset_pref_title">Reset Action Preferences</string>
    <string name="app_actions_reset_pref_summary">Unhide Actions dragged onto “Don’t Show”.</string>
    <string name="all_apps_label_pref_title">Show “All Apps” Label</string>
    <string name="separate_work_apps_pref_title">Second Tab for Work Apps</string>
    <string name="keep_scroll_state_pref_title">Remember Position</string>
    <string name="dock_style_pref_title">Dock Style</string>
    <string name="opacity">Opacity</string>
    <string name="pref_weather_city_title">City</string>
    <string name="default_city">Lucerne, CH</string>
    <string name="pref_weather_api_key_title">API Key</string>
    <string name="title_app_suggestions">Apps</string>
    <string name="app_actions_pref_title_in_search">Actions</string>
    <string name="dock_scale">Dock Size</string>
    <string name="pref_weather_icon_pack">Weather Icon Pack</string>
    <string name="smartspace_add_to_home">Add to Desktop</string>
</resources>